# simckness

./: Cargo.toml  README.md
src/: main.rs  parameters.rs  population.rs  random.rs
src/constants/: mod.rs
src/entities/: age.rs  direction.rs  entity.rs  health.rs  immunity.rs  mod.rs  position.rs  random_impl.rs  speed.rs
