[package]
name = "simckness"
version = "0.1.0"
edition = "2021"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.71"
itertools = "0.10.5"
lazy_static = "1.4.0"
rand = "0.8.5"
bevy="0.10.1"

[workspace]
resolver = "2"